--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <div>
           <p>Based in beautiful Hunterdon County NJ, I am enjoying taking a Coding Bootcamp to become a Full Stack Developer. I was previously a C/C++/Unix developer for over 15 years and I'm having great fun becoming up to speed with the latest technologies. </p>
           <p>For the past 10 years I've owned a Digital Marketing business, and have learned HTML and CSS along with other technologies to update my clients' websites.  Owning a business requires wearing many hats, and I've broadened my experience in ways I never could have imagined. </p>
-          <p>Although I've enjoyed running my business, I look forward to working with a team on a project again.  I find brainstorming with other people to be invigorating and love the idea generation and clarity it brings. I've been taking courses in Java, Javascript, algorithms and data structures this past year. With the knowledge gained from Bootcamp, I am ready to apply myself to a project and GET IT DONE! </p>
+          <p>Although I've enjoyed running my business, I look forward to working with a team on a project again.  I find brainstorming with other people to be invigorating and love the idea generation and clarity it brings. I've been taking courses in Java, Javascript, algorithms and data structures this past year. With the knowledge gained from Bootcamp, I am ready to apply myself to a project. When someone gives me an assignment, they know I won't stop until I GET IT DONE. </p>
           <p>When I'm not learning new skills, coding or working, I spend time in nature which renews my spirit.  Hiking, biking, kayaking are some of my favorite activities.  I've also recently taken up pickleball which is a whole lot of fun. </p>
           
         </div>
