removed extraneous characters in file

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <section class="projects-container" id="projects">
       <h2>Projects</h2>
     
-      <article class="projects-section">git
+      <article class="projects-section">
         <!-- Top image should be largest -->
         <a id = "firstProject" href="https://llwaterhouse.github.io/Code-Refactor-LindaLW/" alt="image of Horiseon projects" target="_blank"><img src="./assets/images/Code-refactor-img.PNG" alt="Screenshot of a project"> 
         <button>Code Refactor</button>
