added new projects

--- a/index.html
+++ b/index.html
@@ -60,19 +60,19 @@
       <article class="projects-section">
         <!-- Top image should be largest -->
         <!-- add button on top of project screenshot with name of project -->
-        <a id="firstProject" href="https://llwaterhouse.github.io/Code-Refactor-LindaLW/"
-          alt="image of Horiseon projects" target="_blank"><img src="./assets/images/Code-refactor-img.PNG"
-            alt="Screenshot of a project">
-          <button>Code Refactor</button>
+        <a id="firstProject" href="https://llwaterhouse.github.io/Survival-Quiz/"
+          alt="image of Survival quiz" target="_blank"><img src="./assets/images/First-question.PNG"
+            alt="Screenshot of a Survival Quiz">
+          <button>Survival Quiz</button>
         </a>
 
-        <a href="https://llwaterhouse.github.io/prework-about-me/" target="_blank"><img
-            src="./assets/images/Pre-work-img.PNG" alt="image of pre-work About page">
-          <button>Pre-work</button> </a>
+        <a href="https://github.com/llwaterhouse/Password-Generator/" target="_blank"><img
+            src="./assets/images/Generate-password.PNG" alt="image of password generator">
+          <button>Password Generator</button> </a>
 
-        <!-- This project itself! -->
-        <a href="#"><img src="./assets/images/Portfolio-project2.png" alt="image of portfolio page">
-          <button>Portfolio</button> </a>
+    
+        <a href="https://github.com/llwaterhouse/Work-Day-Planner" target="_blank"><img src="./assets/images/Work-Day-Planner.png" alt="image of Work-Day-Planner">
+          <button>Work Day Planner</button> </a>
         </a>
 
 
@@ -89,6 +89,8 @@
           <img src="assets/images/email.png" alt="Email icon"> </a>
         <a href="https://linkedin.com/in/lindalwaterhouse" target="_blank">
           <img src="assets/images/linkedin-sign.png" alt="LinkedIn icon"> </a>
+          <a href="tel:9086799976" target="_blank">
+            <img src="assets/images/telephone-symbol-button.png" alt="Phone icon"> </a>
 
       </article>
 
