added more projects to portfolio and my resume

--- a/index.html
+++ b/index.html
@@ -45,10 +45,20 @@
           <img src="assets/images/caricature-circle.png" alt="Caricature of Linda Waterhouse">
         </div>
         <div>
-          <p>Based in beautiful Hunterdon County NJ, I am enjoying taking a Coding Bootcamp to become a Full Stack Developer. I was previously a C/C++/Unix developer for over 15 years and I'm having a great time coming up to speed with the latest technologies. </p>
-          <p>For the past 10 years I've owned a Digital Marketing business, and have learned HTML and CSS along with other technologies to update my clients' websites. Owning a business requires wearing many hats, and I've broadened my experience in ways I never could have imagined. </p>
-          <p>Although I've enjoyed running my business, I look forward to working with a team on a project again. I find  brainstorming with other people to be invigorating and love the idea generation and clarity it brings. I've been taking courses in Java, Javascript, algorithms and data structures this past year. With the knowledge gained from Bootcamp, I am ready to apply myself to a project. When someone gives me an assignment, they know I won't stop until I GET IT DONE. </p>
-          <p>When I'm not learning new skills, coding or working, I spend time in nature which renews my spirit. Hiking, biking, kayaking are some of my favorite activities. I've also recently taken up pickleball which is a whole lot of fun. </p>
+          <p>Based in beautiful Hunterdon County NJ, I am enjoying taking a Rutgers University Coding Bootcamp to become a Full Stack
+            Developer. I was previously a C/C++/Unix developer for over 15 years and I'm having a great time coming up
+            to speed with the latest technologies. </p>
+          <p>For the past 10 years I've owned a Digital Marketing business, and have learned HTML and CSS along with
+            other technologies to update my clients' websites. Owning a business requires wearing many hats, and I've
+            broadened my experience in ways I never could have imagined. </p>
+          <p>Although I've enjoyed running my business, I look forward to working with a team on a project again. I find
+            brainstorming to be invigorating and love seeing ideas get better when other people are involved. I've
+            been taking courses in Java, Javascript, MERN,  algorithms and data structures this past year. With the knowledge
+            gained from Bootcamp, I am ready to apply myself to a project. When someone gives me an assignment, they
+            know I won't stop until I GET IT DONE. </p>
+          <p>When I'm not learning new skills, coding or working, I spend time in nature which renews my spirit. Hiking,
+            biking, kayaking are some of my favorite activities. I've also recently taken up pickleball which is a whole
+            lot of fun. </p>
 
         </div>
 
@@ -60,20 +70,33 @@
       <article class="projects-section">
         <!-- Top image should be largest -->
         <!-- add button on top of project screenshot with name of project -->
-        <a id="firstProject" href="https://llwaterhouse.github.io/Survival-Quiz/"
-          alt="image of Survival quiz" target="_blank"><img src="./assets/images/First-question.PNG"
-            alt="Screenshot of a Survival Quiz">
+        <a id="firstProject" href="https://github.com/quynhndinh/Food-For-Days" alt="image of Food For Days project"
+          target="_blank"><img src="./assets/images/homepageSS.png" alt="Screenshot of Food For Food-For-Days">
+          <button>Food For Days </button>
+        </a>
+
+        <a href="https://llwaterhouse.github.io/Weather-Dashboard/" alt="image of Weather Dashboard" target="_blank"><img
+            src="./assets/images/Five-day-forecast.PNG" alt="Screenshot of a forecast">
+          <button>Weather Dashboard</button>
+        </a>
+
+        <a href="https://llwaterhouse.github.io/Survival-Quiz/" alt="image of Survival quiz" target="_blank"><img
+            src="./assets/images/First-question.PNG" alt="Screenshot of first question">
           <button>Survival Quiz</button>
         </a>
 
-        <a href="https://github.com/llwaterhouse/Password-Generator/" target="_blank"><img
-            src="./assets/images/Generate-password.PNG" alt="image of password generator">
-          <button>Password Generator</button> </a>
+        <a href="https://github.com/llwaterhouse/NoteTaker-Powered-by-Express" target="_blank"><img
+          src="./assets/images/Home-page-of-Note-taker.PNG" alt="image of Note Taker">
+        <button>Note Taker</button> </a>
+      </a>
 
-    
-        <a href="https://github.com/llwaterhouse/Work-Day-Planner" target="_blank"><img src="./assets/images/Work-Day-Planner.png" alt="image of Work-Day-Planner">
+        <a href="https://github.com/llwaterhouse/Work-Day-Planner" target="_blank"><img
+            src="./assets/images/Work-Day-Planner.png" alt="image of Work-Day-Planner">
           <button>Work Day Planner</button> </a>
         </a>
+        <a href="https://github.com/SteveKoutsodontis/Barker" target="_blank"><img
+          src="./assets/images/Barker-homepage.png" alt="image of Barker">
+        <button>Barker</button> </a>
 
 
       </article>
@@ -89,8 +112,10 @@
           <img src="assets/images/email.png" alt="Email icon"> </a>
         <a href="https://linkedin.com/in/lindalwaterhouse" target="_blank">
           <img src="assets/images/linkedin-sign.png" alt="LinkedIn icon"> </a>
-          <a href="tel:9086799976" target="_blank">
-            <img src="assets/images/telephone-symbol-button.png" alt="Phone icon"> </a>
+        <a href="tel:9086799976" target="_blank">
+          <img src="assets/images/telephone-symbol-button.png" alt="Phone icon"> </a>
+        <a href="./assets/images/2022-Linda-Lovero-Waterhouse-resume.pdf" download="2022-Linda-Lovero-Waterhouse-resume">
+            <img src="./assets/images/resumeimg.PNG" alt="Linda Waterhouse Resume" width="104" height="142">
 
       </article>
 
